<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_title"
            android:tooltipText="@string/全部"
            android:title="首页"/>
        <item
            android:id="@+id/nav_store"
            android:title="@string/我的收藏"/>
        <item
            android:id="@+id/nav_comparison"
            android:title="@string/对比"/>
        <item
            android:id="@+id/nav_setting"
            android:title="@string/设置"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
