<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/menu_bg"
    >

    <RelativeLayout
        android:layout_above="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="@dimen/drawer_item_height"
                android:id="@+id/ll_customer_info_layout"
                android:layout_width="match_parent"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginRight="17dp"
                android:background="@color/member_head_color"
                android:layout_height="80dp">
                <ImageView
                    android:padding="@dimen/padding_8"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/iv_icon"
                    android:src="@drawable/user"
                    android:scaleType="fitCenter"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_width="wrap_content"
                        android:text="@string/您好请先登录"
                        android:textColor="@color/backgroud_nomal"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size_18"
                        android:layout_height="match_parent"/>
                    <TextView
                        android:id="@+id/tv_user_detail"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_4"
                        android:layout_width="wrap_content"
                        android:text="@string/编辑个人资料"
                        android:textColor="@color/backgroud_nomal"
                        android:drawablePadding="@dimen/padding_10"
                        android:drawableRight="@drawable/right"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/text_size_13"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_main"
                    android:textSize="@dimen/text_size_15"
                    android:drawableLeft="@drawable/menu_icon_home"
                    android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/padding_8"
                    android:layout_height="@dimen/drawer_item_height"
                    android:gravity="center_vertical"
                    android:textColor="@color/nav_item_color"
                    android:text="@string/首页"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_order_list"
                        android:textSize="@dimen/text_size_15"
                        android:drawableLeft="@drawable/menu_icon_orders"
                        android:layout_marginBottom="@dimen/padding_8"
                        android:drawablePadding="@dimen/padding_10"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/drawer_item_height"
                        android:gravity="center_vertical"
                        android:textColor="@color/nav_item_color"
                        android:text="@string/我的订单"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                    <TextView
                        android:id="@+id/tv_order_list_count"
                        android:visibility="gone"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:gravity="center"
                        android:text="3"
                        android:textColor="@color/tab_text_nomal_color"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_15"
                        android:layout_width="wrap_content"
                        android:background="@drawable/order_count_bg"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_my_favorite"
                    android:textSize="@dimen/text_size_15"
                    android:drawableLeft="@drawable/menu_icon_collection"
                    android:layout_marginBottom="@dimen/padding_8"
                    android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawer_item_height"
                    android:gravity="center_vertical"
                    android:textColor="@color/nav_item_color"
                    android:text="@string/我的收藏"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <TextView
                    android:id="@+id/tv_contrast"
                    android:textSize="@dimen/text_size_15"
                    android:drawableLeft="@drawable/menu_icon_compare"
                    android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawer_item_height"
                    android:gravity="center_vertical"
                    android:textColor="@color/nav_item_color"
                    android:text="@string/车型对比"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <TextView
                    android:id="@+id/tv_about"
                    android:textSize="@dimen/text_size_15"
                    android:drawableLeft="@drawable/menu_icon_about"
                    android:layout_marginBottom="@dimen/padding_8"
                    android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawer_item_height"
                    android:gravity="center_vertical"
                    android:textColor="@color/nav_item_color"
                    android:text="@string/关于"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <TextView
                    android:id="@+id/tv_setting"
                    android:textSize="@dimen/text_size_15"
                    android:drawableLeft="@drawable/menu_icon_setting"
                    android:layout_marginBottom="@dimen/padding_8"
                    android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawer_item_height"
                    android:textColor="@color/nav_item_color"
                    android:gravity="center_vertical"
                    android:text="@string/设置"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_shopping_car"
                    android:textSize="@dimen/text_size_15"
                    android:layout_marginBottom="@dimen/padding_8"
                    android:drawableLeft="@drawable/menu_icon_cart"
                    android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawer_item_height"
                    android:gravity="center_vertical"
                    android:textColor="@color/nav_item_color"
                    android:text="@string/购物车"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>




        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_marginLeft="@dimen/drawer_item_height"
        android:layout_marginRight="@dimen/drawer_item_height"
        android:background="@drawable/login_button_bg"
        android:text="@string/加入会员"
        android:textStyle="bold"
        android:textColor="@color/backgroud_nomal"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/tv_backend_setting"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="200dp"
        android:layout_height="100dp"/>

</RelativeLayout>
