<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/ll_input_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/layout_bg"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:errorTextAppearance="@style/errorTextAppearance"
            app:hintTextAppearance="@style/hintTextAppearance"
            app:counterTextAppearance="@style/counterOverflow"
            android:gravity="center_vertical"
            >

            <!--EditText 设置左侧图片,系统建议drawableStart/drawableLeft一起用,API>17-->
            <AutoCompleteTextView
                android:id="@+id/auto_et_last_name"
                android:layout_width="match_parent"
                android:hint="@string/姓氏"
                android:textSize="18dp"
                android:editable="true"
                android:textColor="@color/car_detail_color"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:errorTextAppearance="@style/counterOverflow"
            android:gravity="center_vertical"
            >

            <!--EditText 设置左侧图片,系统建议drawableStart/drawableLeft一起用,API>17-->
            <AutoCompleteTextView
                android:id="@+id/auto_et_first_name"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:hint="@string/名字"
                android:editable="true"
                android:textColor="@color/car_detail_color"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sex_layout"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="80dp"
            app:errorTextAppearance="@style/counterOverflow"
            android:gravity="center_vertical"
            >

            <!--EditText 设置左侧图片,系统建议drawableStart/drawableLeft一起用,API>17-->
            <AutoCompleteTextView
                android:id="@+id/auto_et_sex"
                android:layout_width="match_parent"
                android:drawableRight="@drawable/dropdown"
                android:hint="@string/性别"
                android:textSize="18dp"
                android:lines="1"
                android:editable="false"
                android:textColor="@color/car_detail_color"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:background="@drawable/selector_submit_btn_bg"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/bottom_bar_margin"
            android:text="@string/注册"
            android:textStyle="bold"
            android:textColor="@color/backgroud_nomal"
            android:textSize="22sp"/>



    </LinearLayout>



</RelativeLayout>
